# rust-rag

./: .env.gpg  .gitignore  README.md
bow/: Cargo.toml
bow/src/: main.rs
chunk/: Cargo.toml
chunk/src/: data.rs  main.rs
compare/: Cargo.toml
compare/src/: embeddings.rs  main.rs
constrained/: Cargo.toml
constrained/src/: data.rs  llm.rs  main.rs  vector_db.rs
embedding/: .env  Cargo.toml
embedding/src/: embeddings.rs  main.rs
iterative/: Cargo.toml
iterative/src/: embeddings.rs  llm.rs  main.rs  retrieval.rs  vector_db.rs
lexical/: Cargo.toml
lexical/src/: hybrid.rs  llm.rs  main.rs  vector_db.rs
metadata/: Cargo.toml
metadata/src/: data.rs  main.rs  vector_db.rs
overlap/: Cargo.toml
overlap/src/: llm.rs  main.rs  summary.rs  vector_db.rs
rag/: Cargo.toml
rag/data/: corpus.json
rag/src/: main.rs
retrieval/: .gitignore  Cargo.toml  README.md
retrieval/data/: corpus.json
retrieval/src/: data.rs  llm.rs  main.rs  vector_db.rs
t-sne/: Cargo.toml
t-sne/data/: corpus.json
t-sne/src/: data.rs  main.rs
trust/: Cargo.toml
trust/data/: corpus.json
trust/src/: llm.rs  main.rs  test_retrieval.rs
vector/: Cargo.toml  README.md  setup.sh
vector/src/: data.rs  embeddings.rs  main.rs  vector_db.rs
