[package]
name = "overlap"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.29.3"
rust-bert = "0.23.0"
chromadb = "2.2.2"
dotenv = "0.15"
ndarray = "0.16.1"
plotters = "0.3.7"
rand = "0.9.2"
rand_isaac = "0.4.0"
bhtsne = "0.5.3"
chrono = "0.4.40"
regex = "1.11.1"
bm25 = "2.2.1"
console = { version = "0.16.0", features = ["std"] }
